<resources>
    <string name="app_name">NEWS APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bcc">bcc</string>
    <string name="BCC" />
    <string name="hindustan_time">Hindustan Time</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="zee_news">ZEE News</string>
    <string name="newyork_times">Newyork Times</string>
    <string name="fox_news">Fox News</string>
    <string name="bbc">BBC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abp_news">Abp News</string>
    <string name="news_24">News 24</string>
    <string name="new_york_time">New york Time</string>
</resources>